# lineart-auto-drawer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
include/: batch_processor.h  common.h  image_preprocessor.h  line_extractor.h  mouse_controller.h  svg_exporter.h
src/: batch_processor.cpp  image_preprocessor.cpp  line_extractor.cpp  main.cpp  mouse_controller.cpp  svg_exporter.cpp
